# edpo-project-group1

./: .gitignore  README.md  diagram_3.bpmn  docker-compose-development.yml  docker-compose.yml  operaton-h2-database.mv.db  operaton-h2-database.trace.db  pyproject.toml
inventory/: main.py  (+3 more)
services/dobot-control/: Dockerfile  README.md  config.yml  pyproject.toml
services/dobot-control/api/: Absolute Move.bru  Change Movement Speed.bru  Conveyor Move Continuous.bru  Conveyor Move Distance.bru  Home.bru  Move to Position.bru  Read Color.bru  Read IR.bru  Relative Move.bru  Run Flow from File.bru  Run Flow from HTTP.bru  Stop.bru  Suction Cup.bru  bruno.json  collection.bru
services/dobot-control/flows/: example.playback  positions.xml  structure-specification.xml  to-build-area.yaml  to-color-sensor.yaml  to-distance-sensor.yaml  to-holding-position.yaml  to-inventory.yaml
services/dobot-control/src/: app.py  commands.py  config_model.py  dobot.py  dobot_fake.py  simulator_client.py
services/dobot-control/tests/: test_simulator_integration.py
services/simulated-factory/: Dockerfile  PLUGIN_DEVELOPMENT.md  README.md  api.md  config.yml  main.py  palette.css  presets.yml  pyproject.toml
services/simulated-factory/api/: Simulator Color Compatibility.yml  Simulator Config Sensors List.yml  Simulator Config Sensors Update.yml  Simulator Dobot Color.yml  Simulator Dobot Commands.yml  Simulator Dobot IR.yml  Simulator Dobot State.yml  Simulator Events List.yml  Simulator Events Post.yml  Simulator Health.yml  Simulator Interactive Config Get.yml  Simulator Interactive Config Put.yml  Simulator Interactive Pending.yml  Simulator Interactive Resolve.yml  Simulator Presets API Collection.yml  Simulator Presets List.yml  Simulator Presets Reset.yml  Simulator Presets Run.yml  Simulator Presets Stop.yml  Simulator Status.yml  opencollection.yml
services/simulated-factory/simulated_factory/: __init__.py  api.py  deps.py  engine.py  events.py  models.py  utils.py
(+432 files in other folders)
