[project]
name = "edpo-project-group1"
version = "0.1.0"
description = "EDPO Project Group 1 Python dependency management"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask",
    "pydantic",
    "pydobotplus",
    "pyyaml",
    "werkzeug",
    "fastapi",
    "uvicorn[standard]",
]
classifiers = ["Private :: Do Not Upload"]

[tool.uv.workspace]
members = [
    "services/dobot-control",
    "services/inventory",
]
