[project]
name = "dobot-control"
version = "1"
requires-python = ">=3.13"
description = "Application to control the Dobot Magician robots via USB"
dependencies = [
    "flask>=3.1.3",
    "pydantic>=2.12.5",
    "pydobotplus>=0.1.2",
    "pyyaml>=6.0.3",
    "werkzeug>=3.1.6",
]
classifiers = ["Private :: Do Not Upload"]

[tool.uv]
   package = true

[project.scripts]
dobot-api = "app:main"
