[project]
name = "simulated-factory"
version = "1"
requires-python = ">=3.13"
description = "Browser-driven simulated factory service for local development"
readme = "README.md"

dependencies = [
    "fastapi",
    "httpx",
    "paho-mqtt",
    "pydantic",
    "pyyaml",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"