[project]
name = "simulated-factory"
version = "1"
requires-python = ">=3.13"
description = "Browser-driven simulated factory service for local development"
readme = "README.md"

dependencies = [
    "aiokafka>=0.11",
    "fastapi",
    "httpx",
    "jinja2>=3.1",
    "paho-mqtt",
    "pydantic",
    "pyyaml",
    "sse-starlette>=2.1",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"